# openforms

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entry.bash  pyproject.toml  ruff.toml
backend/app/: app.py
backend/app/api/routes/v1/: router.py
backend/app/api/routes/v1/controllers/: auth.py  form.py  miscellaneous.py
backend/app/api/routes/v1/dto/: auth.py  form.py  miscellaneous.py
backend/app/api/routes/v1/providers/: auth.py  form.py  miscellaneous.py
backend/app/core/config/: env.py
backend/app/core/db/: models.py  setup.py
backend/app/core/db/builders/: permission.py  role.py
backend/app/core/logging/: log.py
backend/app/core/security/: checkers.py  permissions.py
backend/app/core/services/: email.py  templating.py
backend/app/core/services/ai/: providers.py  translation.py
backend/app/core/services/ai/dto/: gemini_dto.py
backend/app/utils/: crypto.py  date.py
backend/assets/templates/email/: account_verification.html  otp.html
backend/migrations/: env.py
backend/migrations/versions/: 13d7c885ef1c_add_submission_date.py  1808e811998e_add_position_to_fields.py  1fe090bc7a21_.py  2ac8fee1629c_add_form_related_tables.py  587b8b93effc_.py  61304c08351e_link_user_to_forms.py  825b3f84b58c_feat_deadlines_add_deadline_and_.py  aa7fe389d0a4_better_auth.py  e1b5052f4803_remove_accidental_second_pkey_on_.py
frontend/: .dockerignore  .env.local  Dockerfile  README.md  bun.lockb  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+53 files in other folders)
