[tool.pyright]
typeCheckingMode = "standard"

[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "piccolo[playground,postgres,sqlite,uvloop]>=1.26.1",
    "psycopg2-binary>=2.9.10",
    "rich>=14.0.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "uvloop>=0.21.0",
    "websockets>=15.0.1",
]
